# tickgrinder

./: .eslintrc.json  .gitignore  .gitmodules  Cargo.toml  Dockerfile  License.txt  Makefile  README.md  THANKS.txt  conf.default.js  dev.sh  fxcm_native  gource-recent.sh  gource.sh  manager.js  run.sh
.circleci/: config.yml
Ds/: S
TickRecorder/: .gitignore  build.xml
backtester/: Cargo.toml  README.md  bench.sh  profile.sh  test-specific.sh  test.sh
backtester/.cargo/: config
backtester/src/: backtest.rs  broker.rs  conf.default.rs  conf.rs  data.rs  main.rs  sim_broker.rs
backtester/src/backtest/: mod.rs
backtester/src/data/: console_sink.rs  flatfile_reader.rs  mod.rs  null_sink.rs  postgres_reader.rs  random_reader.rs  redis_reader.rs  redis_sink.rs  stream_sink.rs
backtester/src/sim_broker/: client.rs  helpers.rs  mod.rs  tests.rs
broker_shims/: README.md
broker_shims/simbroker/: Cargo.toml  README.md  install.sh  install_release.sh
channel_id_sliding_windows/: Cargo.toml
channel_id_sliding_windows/src/: lib.rs  window_manager.rs
configurator/: .gitignore  Cargo.toml
configurator/src/: directory.rs  main.rs  misc.rs  schema.rs  theme.rs
data/: .gitignore  plot_poloniex_trades.py
data/documents/: .gitignore
data_downloaders/fxcm/: README.md  download.js
data_downloaders/fxcm_flatfile/: Cargo.toml  install.sh  install_release.sh
data_downloaders/fxcm_java/: .gitignore  download.js  package.json
data_downloaders/fxcm_native/: .gitignore  Cargo.toml  README.txt  debug.sh  run.sh  test.sh
data_downloaders/iex/: .gitignore  iex.js  package.json  run.sh
data_downloaders/poloniex/: .babelrc  .gitignore  debug.sh  index.js  inspect.sh  package.json  run.sh
hist_preprocessor/: Cargo.toml  README.txt
hist_preprocessor/.cargo/: config
hist_preprocessor/src/: main.rs  preprocessor.rs
lex/: README.txt  meo.l  sample.b4  sample.meo
logger/: Cargo.toml  install.sh  install_release.sh
logger/.cargo/: config
logger/src/: main.rs
mm/: .gitignore  README.md  conf.default.js  conf.sample.js  db.js  ffi.js  manager.js  package.json
mm-react/: .eslintrc.json  .gitignore  .roadhogrc  package.json
mm-react/public/: .gitignore  index.html  staticStyle.css
mm-react/src/: index.js  router.js
mm/routes/: api.js  data.js  index.js
mm/sources/: backtest.css  backtest.js  commands.css  commands.js  data_downloaders.js  global_script.js  global_style.css  instance_css.css  instance_script.js  log.css  log.js  monitor_script.js
mm/views/: backtest.ejs  commands.ejs  data_downloaders.ejs  instances.ejs  log.ejs  (+1 more)
optimizer/: .gitignore  Cargo.toml
optimizer/.cargo/: config
optimizer/src/: conf.sample.rs  main.rs  processor.rs
optimizer/src/tests/benchmarks/: misc.rs  mod.rs  transport.rs
optimizer/src/transport/: test.rs  tick_processor.rs
private/: .gitignore  Cargo.toml  README.md  build.sh  install.sh  install_release.sh  test.sh
private/.cargo/: config
private/src/: conf.default.rs  lib.rs
private/src/indicators/: mod.rs  sma.rs
private/src/sinks/: mod.rs
private/src/strategies/: mod.rs  sma_cross.rs
private/src/strategies/fuzzer/: README.md  mod.rs
private/src/strategies/sma_cross/: mod.rs
private/src/trading_conditions/: mod.rs  sma_cross.rs
private/strategies/: .gitignore  new.sh
private/strategies/.templates/: README.txt  config
routes/: api.js
scripts/: .gitignore
spawner/: Cargo.toml  README.md  install.sh  install_release.sh
spawner/.cargo/: config
spawner/src/: conf.default.rs  documents.rs  main.rs  redis_proxy.rs
src/: conf.default.rs  conf.rs  conf.sample.rs  datafield.rs  lib.rs  main.rs  processor.rs  strategies.rs  tick.rs  transport.rs
strategies/: .gitignore
tick_parser/: Cargo.toml
tick_parser/.cargo/: config
tick_parser/src/: conf.default.rs  datafield.rs  main.rs  processor.rs
tick_parser/src/calc/: mod.rs  sma.rs
tick_parser/src/calc/tests/: mod.rs  sma.rs
tick_parser/src/tests/: mod.rs
tick_parser/src/tests/benchmarks/: mod.rs  processing.rs
tick_parser/src/transport/: test.rs
tick_writer/: writer.js
util/: Cargo.toml
util/.cargo/: config
util/from_hashmap/: Cargo.toml
util/from_hashmap/src/: lib.rs
util/js/: .eslintrc.json  .gitignore  README.txt  index.js  package.json
util/js/src/: ffi.js
util/src/: instance.rs  lib.rs  strategies.rs  tick.rs
util/src/trading/: broker.rs  datafield.rs  indicators.rs  mod.rs  objects.rs  tick.rs  trading_condition.rs
util/src/trading/broker/: mod.rs
util/src/trading/broker/shims/FXCM/java_bridge/: README.md
util/src/trading/broker/shims/FXCM/native/: .gitignore  Cargo.toml  bench.sh  core.sh  debug.sh  r2.sh  r2_release.sh  release_debug.sh  release_test.sh  test.sh  valgrind.sh
util/src/trading/broker/shims/FXCM/native/.cargo/: config
util/src/trading/broker/shims/FXCM/native/native/: build.sh  install.sh
util/src/trading/broker/shims/FXCM/native/native/src/: GlobalResponseListener.cpp  GlobalResponseListener.h  GlobalTableListener.cpp  GlobalTableListener.h  OffersResponseListener.cpp  OffersResponseListener.h  OffersTableListener.cpp  OffersTableListener.h  SessionStatusListener.cpp  SessionStatusListener.h  broker_server.cpp  libfxcm_ffi.cpp  libfxcm_ffi.h  offers.cpp  sub_ticks.cpp  trade_execution.cpp
util/src/trading/broker/shims/FXCM/native/src/: conf.default.rs  helper_objects.rs  lib.rs
util/src/transport/: command_server.rs  commands.rs  data.rs  ffi.rs  mod.rs  postgres.rs  query_server.rs  redis.rs  textlog.rs
util/src/transport/ffi/: mod.rs  poloniex.rs
util/src/transport/tickstream/: console_sink.rs  flatfile_reader.rs  generics.rs  maps.rs  mod.rs  null_sink.rs  postgres_reader.rs  random_reader.rs  redis_reader.rs  redis_sink.rs  stream_sink.rs
util/src/transport/tickstream/generators/: flatfile_reader.rs  mod.rs  postgres_reader.rs  random_reader.rs  redis_reader.rs
util/src/transport/tickstream/maps/: mod.rs  poloniex.rs
util/src/transport/tickstream/sinks/: console_sink.rs  csv_sink.rs  mod.rs  null_sink.rs  redis_sink.rs  stream_sink.rs
views/: instances.ejs
(+153 files in other folders)
