[package]
name = "tick_processor"
version = "4.0.3"
authors = ["Casey Primozic <me@ameo.link>"]

[dependencies]
redis = { git = "https://github.com/mitsuhiko/redis-rs" }
futures = { git = "https://github.com/alexcrichton/futures-rs" }
serde = "0.8.4"
serde_json = "0.8.1"
serde_macros = "0.8.4"
postgres = "0.11"
uuid = { version = "0.3.1", features = ["serde", "v4"] }

algobot-util = { path = "../util", version = "*" }
