[package]
name = "backtester"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]

[dependencies]
redis = { git = "https://github.com/mitsuhiko/redis-rs" }
futures = { git = "https://github.com/alexcrichton/futures-rs", rev="ed43dcc6" }
algobot-util = { path = "../util", version = "*" }
serde = "0.8.4"
uuid = { version = "0.3.1", features = ["serde", "v4",] }
