[package]
name = "configurator"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]

[dependencies]
cursive = { git = "https://github.com/gyscos/Cursive.git", default-features = false, features = ["termion"] }
serde_json = "0.8.4"
indoc = "^0.1"
termion = "1.1.1"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
