[package]
name = "spawner"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
description = "Instance spawner and management system for the Bot4 algorithmic trading platform"

[dependencies]
redis = { git = "https://github.com/mitsuhiko/redis-rs" }
futures = { git = "https://github.com/alexcrichton/futures-rs", rev = "ed43dcc6" }
uuid = { version = "0.3.1", features = ["serde", "v4"] }
serde = "0.8.13"
serde_json = "0.8.3"
serde_derive = "0.8.16"

algobot-util = { path = "../util" }
