[package]
name = "tick_processor"
version = "4.0.3"
authors = ["Casey Primozic <me@ameo.link>"]

[dependencies]
redis = { git = "https://github.com/mitsuhiko/redis-rs" }
futures = { git = "https://github.com/alexcrichton/futures-rs", rev="ed43dcc6" }
serde = "0.8.4"
serde_json = "0.8.1"
postgres = { git = "https://github.com/sfackler/rust-postgres", features = [ "with-serde_json" ] }
uuid = { version = "0.3.1", features = ["serde", "v4"] }

algobot-util = { path = "../util", version = "*" }
