[package]
name = "tickgrinder-util"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
description = "Code used in all of TickGrinder's modules."

[dependencies]
redis = "0.5.3"
futures = "=0.1.8"
postgres = "0.13"
ws = "0.5.3"
serde = "0.8.22"
serde_json = "0.8"
serde_derive = "0.8.22"
uuid = { version = "0.4", features = ["serde", "v4",] }
indoc = "^0.1"
time = "0.1.35"
rand = "0.3"
tantivy = { git = "https://github.com/tantivy-search/tantivy.git" }
from_hashmap = { path = "from_hashmap" }
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", optional = true  }

[lib]
name = "tickgrinder_util"
crate-type = ["dylib"]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
