[package]
name = "tickgrinder-util"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
description = "Code used in all of TickGrinder's modules."

[dependencies]
redis = "0.5.3"
futures = "=0.1.8"
postgres = "0.13"
ws = "0.5.3"
serde = "0.9.7"
serde_json = "0.9.6"
serde_derive = "0.9.7"
libflate = "0.1.3"
hyper = "0.10.4"
rustc-serialize = "0.3"
csv = "0.15.0"
tempdir = "0.3"
lazy_static = "0.1.*"
uuid = { version = "=0.4", features = ["serde", "v4",] }
indoc = "^0.1"
time = "0.1.35"
chrono = "0.3.0"
rand = "0.3"
from_hashmap = { path = "from_hashmap" }
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", optional = true  }

[lib]
name = "tickgrinder_util"
crate-type = ["dylib"]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
