[package]
name = "tickgrinder-util"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
description = "Code used in all of TickGrinder's modules."

[dependencies]
redis = "0.8.0"
futures = "=0.1.14"
postgres = "0.15.1"
ws = "0.7.3"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
libflate = "0.1.10"
hyper = "0.11.2"
# rustc-serialize = "0.3"
csv = "1.0.0-beta.4"
tempdir = "0.3.5"
lazy_static = "0.1.*"
uuid = { version = "=0.5.1", features = ["serde", "v4",] }
indoc = "^0.1.15"
time = "0.1.38"
chrono = "0.4.0"
rand = "0.3.16"
from_hashmap = { path = "from_hashmap" }
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", optional = true  }

[lib]
name = "tickgrinder_util"
crate-type = ["dylib"]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
